# Kolos1

./: CMakeLists.txt
include/: Fighter.h  Galaxy.h  Interceptor.h  Spacecraft.h  typedefs.h
src/: Galaxy.cpp  main.cpp
test/: NauczycielTest.cpp  StudentTest.cpp  config.cpp
